Finish need fix:icons and truncated menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -105,7 +105,7 @@ header .flex {
   justify-content: space-between;
   align-items: center;
   text-align: center;
-  margin: 3rem 6rem;
+  margin: 3rem;
   width: 5rem;
   height: 8rem;
 }
@@ -162,5 +162,78 @@ footer img {
   margin-right: 1rem;
 }
 
-/*Tablet*/
+/* Tablet */
 
+@media only screen and (max-width: 1024px) {
+  header {
+    height: 22rem;
+    padding-top: 0;
+  }
+  nav .container {
+    max-width: 100%
+  }
+  .main-banner {
+    padding: 0.75rem 4rem;
+    margin-right: 2rem;
+    margin-top: 5rem;
+  }
+  h1 {
+    font-size: 1.33rem;
+  }
+}
+
+/* Mobile */
+
+@media only screen and (max-width: 480px) {
+  header {
+    height: 17rem;
+    padding-top: 0;
+    background-position: 20%;
+  }
+  .menu ul {
+    display: none;
+  }
+  .truncated-menu ul {
+    display: block;
+  }
+  h1 {
+    font-size: 1rem;
+  }
+  .main-banner {
+    padding: 0 1rem;
+    margin: 9rem auto 0 auto;
+    width: 100%;
+    text-align: center;
+  }
+  .supporting {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 3rem;
+  }
+  .service {
+    height: auto;
+    margin: .77rem;
+    font-size: .77rem;
+  }
+  .info {
+    width: auto;
+  }
+
+  .info .title {
+    width: 100%;
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .info p {
+    padding: 1rem;
+    font-size: .77rem;
+  }
+  footer {
+    justify-content: center;
+  }
+  footer p {
+    display: none;
+  }
+}
